[package]
name = "napi_wasmer"
version = "0.1.0"
description = "NAPI library for Wasmer WebAssembly runtime"
edition = "2024"

resolver = "2"

[features]
cli = [
    "dep:wasmer-wasix",
    "dep:wasmer-cache",
    "dep:wasmer-compiler-llvm",
    "dep:tokio",
    "dep:virtual-fs",
    "dep:wasmer-types",
]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true}
virtual-fs = { version = ">=0.701.0-rc.2", optional = true }

wasmer = { version = ">=7.1.0-rc.2" }
wasmer-cache = { version = ">=7.1.0-rc.2", optional = true }
wasmer-compiler-llvm = { version = ">=7.1.0-rc.2", optional = true }
wasmer-types = { version = ">=7.1.0-rc.2", optional = true }
wasmer-wasix = { version = ">=0.701.0-rc.2", optional = true }

[build-dependencies]
cc = "1"
tar = "0.4"
ureq = "2"
xz = "0.1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[[bin]]
name = "napi_wasmer"
path = "src/bin/napi_wasmer.rs"
required-features = ["cli"]
